[gd_scene load_steps=4 format=3 uid="uid://7socxwkha3rh"]

[ext_resource type="Script" path="res://assets/scenes/pause.gd" id="1_ltp6s"]
[ext_resource type="Script" path="res://assets/scripts/settings.gd" id="2_ienc4"]
[ext_resource type="Texture2D" uid="uid://mx36wmqat110" path="res://icon.svg" id="3_1lvcx"]

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltp6s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="continue" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="options" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="quit" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ienc4")

[node name="image" type="MarginContainer" parent="settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 80

[node name="TextureRect" type="TextureRect" parent="settings/image"]
layout_mode = 2
texture = ExtResource("3_1lvcx")

[node name="points" type="MarginContainer" parent="settings/image/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 30

[node name="ScrollContainer" type="ScrollContainer" parent="settings/image/TextureRect/points"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="settings/image/TextureRect/points/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 28
theme_override_constants/v_separation = 10
columns = 2

[node name="resolutionText" type="Label" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Resolution"

[node name="resolution" type="OptionButton" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
texture_filter = 1
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "error"
popup/item_1/text = "1366×768"
popup/item_1/id = 1
popup/item_2/text = "1920×1080"
popup/item_2/id = 2
popup/item_3/text = "2560×1440"
popup/item_3/id = 3

[node name="Label" type="Label" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="settings/image/TextureRect/points/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="close" type="Button" parent="settings/image/TextureRect/points"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/icon_max_width = 59
icon = ExtResource("3_1lvcx")
flat = true

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="settings/image/TextureRect/points/ScrollContainer/GridContainer/resolution" to="settings" method="_on_resolution_item_selected"]
[connection signal="toggled" from="settings/image/TextureRect/points/ScrollContainer/GridContainer/CheckButton" to="settings" method="_on_check_button_toggled"]
[connection signal="pressed" from="settings/image/TextureRect/points/close" to="settings" method="_on_close_pressed"]
